Add light theme styles for info message component with blue color scheme

--- a/src/ui.html
+++ b/src/ui.html
@@ -214,6 +214,13 @@
       border-left: 4px solid var(--tag-secondary-bg);
     }
     
+    /* Ajustes específicos para o tema claro - info message */
+    body:not(.dark-theme) .info-message {
+      background-color: #e6f7ff;
+      color: #0070e0;
+      border-left: 4px solid #0070e0;
+    }
+    
     .action-button {
       background-color: #18a0fb;
       color: white;
