--- a/src/ui.html
+++ b/src/ui.html
@@ -2444,11 +2444,21 @@
           break;
           
           case 'update-collections-result':
-            // Atualizar o resultado da substituição de variáveis na coleção
+            // Atualizar o resultado da substituição de variáveis na coleção usando o sistema de tradução
             if (message.success) {
-              showInfoUpdate(message.message);
+              if (message.messageKey === 'success_updated_with_errors') {
+                showInfoUpdate(t('success_updated_with_errors', {count: message.count, errors: message.errors}));
+              } else {
+                showInfoUpdate(t('success_updated', {count: message.count}));
+              }
             } else {
-              showErrorUpdate(message.message);
+              if (message.messageKey === 'failed_update_variables') {
+                showErrorUpdate(t('failed_update_variables', {errors: message.errors}));
+              } else if (message.message) {
+                showErrorUpdate(message.message);
+              } else {
+                showErrorUpdate(t('error_generic'));
+              }
             }
             updateButton.disabled = false;
             break;
@@ -3820,6 +3830,9 @@
         // Success messages
         'success_updated': 'Successfully updated {count} variables',
         'success_replaced': 'Successfully replaced {count} variables',
+        'success_updated_with_errors': 'Successfully updated {count} variables. {errors} variables with errors.',
+        'failed_update_variables': 'Failed to update variables. {errors} variables with errors.',
+        'error_generic': 'An error occurred',
         'no_matches_found': 'No matches found',
         'found_matches': 'Found {count} matches',
         'starting_variable_replacement': 'Starting variable replacement...',
@@ -3944,6 +3957,9 @@
         // Success messages
         'success_updated': 'Atualizadas com sucesso {count} variáveis',
         'success_replaced': 'Substituídas com sucesso {count} variáveis',
+        'success_updated_with_errors': '{count} variáveis atualizadas com sucesso. {errors} variáveis com erro.',
+        'failed_update_variables': 'Não foi possível atualizar as variáveis. {errors} variáveis com erro.',
+        'error_generic': 'Ocorreu um erro',
         'found_matches': 'Encontradas {count} correspondências',
         'starting_variable_replacement': 'Iniciando substituição de variáveis...',
         'select_collection_preview': 'Selecione uma coleção para visualizar variáveis.',
