--- a/src/ui.html
+++ b/src/ui.html
@@ -1208,9 +1208,12 @@
       color: var(--text-color);
       font-weight: 600;
       padding: 8px 16px;
-      border-radius: 4px;
-      background-color: var(--background-color);
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.7);
+    }
+    
+    body.dark-theme .loading-text {
+      color: var(--text-color);
+      text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     }
     
     @keyframes spin {
